# go-server-fastapi-gRPC

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  draft.excalidraw  implementation-guideline.md
cli-go/: .env.example  go.mod
cli-go/cmd/: main.go
cli-go/internal/client/: http_client.go
cli-go/internal/cmd/: login.go  root.go  subfinder.go  token_store.go
fastapi-gateway/: .dockerignore  .env.docker  .env.example  Dockerfile  README.md  main.py  pyproject.toml
fastapi-gateway/app/core/: config.py  security.py
fastapi-gateway/app/dependencies/: auth.py
fastapi-gateway/app/internal/: scan_port_client.py  scan_subdomain_client.py  scanner_client.py  user_client.py
fastapi-gateway/app/routers/: scan_port.py  scan_subdomain.py
fastapi-gateway/app/schema/: scanner_schemas.py
fastapi-gateway/app/utils/: __init__.py  grpc_errors.py
go-server/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum  sqlc.yaml
go-server/cmd/: main.go
go-server/internal/database/: postgres.go  schema.sql
go-server/internal/database/migrations/: 000001_init_schema.down.sql  000001_init_schema.sql  000002_ensure_upsert_constraints.down.sql  000002_ensure_upsert_constraints.sql  000002_ensure_upsert_constraints.up.sql  000003_remove_domain_timestamps.down.sql  000003_remove_domain_timestamps.sql  (+7 more)
go-server/internal/models/: domain.go  open_port.go  subdomain.go  technologies.go
go-server/internal/service/: scan_subdomain.go  scanner.go  user_service.go
proto/: scan.proto  scan_port.proto  scan_subdomain.proto  user.proto
(+16 files in other folders)
